translation-tool/inputs/source_meta/objects/YAHS_LocaleDateTimeFormater__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to store locale specific date and time formats for Date time picker</description>
    <fields>
        <fullName>Date_Format__c</fullName>
        <inlineHelpText>Enter Date format specific to the locale</inlineHelpText>
        <label>Date Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Time_Format__c</fullName>
        <description>This will contain the English time format</description>
        <label>English Time Format</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Format__c</fullName>
        <inlineHelpText>Enter time format specific to locale</inlineHelpText>
        <label>Time Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>LocaleDateTimeFormater</label>
</CustomObject>